--- a/stripe_project/stripe_app/templates/item_details.html
+++ b/stripe_project/stripe_app/templates/item_details.html
@@ -1,22 +1,24 @@
 <html>
   <head>
-    <title>Buy Item {{item.id}}</title>
+    <title>Buy Item {{ item.id }}</title>
   </head>
   <body>
-    <h1>Item number {{item.id}} </h1>
+    <h1>Item number {{ item.id }}</h1>
     <p>Description:</p>
     <p>{{ item.description }}</p>
     <p>Price:</p>
     <p>{{ item.price }}</p>
     <button id="buy-button">Buy</button>
+    <button id="add-to-cart-button">Add to Cart</button>
     <script src="https://js.stripe.com/v3/"></script>
     <script type="text/javascript">
         var stripe = Stripe('{{ public_stripe_key }}');
         var buyButton = document.getElementById('buy-button');
+        var addToCartButton = document.getElementById('add-to-cart-button');
         var itemId = window.location.pathname.split('/').pop();
         console.log('Item ID:', itemId); // Проверяем значение itemId
         buyButton.addEventListener('click', function() {
-            console.log('Button clicked'); // Проверяем, срабатывает ли обработчик события клика на кнопке "Buy"
+            console.log('ADD Button clicked'); // Проверяем,что работает кнопка ADD
             // Create a new Checkout Session using the server-side endpoint 
             // Redirect to Stripe Session Checkout
             fetch('{% url "buy-item" item.id %}', { method: 'GET' })
@@ -25,9 +27,22 @@
                 console.log(session);
                 stripe.redirectToCheckout({ sessionId: session.session_id });
               })
-            .catch(error => console.error('Error:', error)); // Добавляем обработку ошибок
+            .catch(error => console.error('Error:', error));
         });
-        
+        addToCartButton.addEventListener('click', function() {
+            console.log('Cart Button clicked');
+            fetch('{% url "add-to-cart" item.id %}', {
+              method: 'POST',
+              headers: {
+                  'X-CSRFToken': '{{ csrf_token }}'
+              }
+          })
+            .then(response => response.json())
+            .then(data => {
+            alert(data.message); // Оповещение об успешном добавлении в корзину
+        })
+
+        });
     </script>
   </body>
 </html>
